# personal_projects

./: .gitmodules  CMakeLists.txt
experiments/coroutines/: asio_coro_callback  asio_coro_callback.cpp  random_generator_server.py
fixed_point/: Makefile  fixed_point.cpp  fixed_point.hpp  fixed_point_main.cpp
iouring-cpp/: CMakeLists.txt
iouring-cpp/examples/: CMakeLists.txt
iouring-cpp/examples/echo_client/: CMakeLists.txt  echo_client_main.cpp
iouring-cpp/examples/echo_server/: CMakeLists.txt  echo_server_main.cpp
iouring-cpp/include/: cppcoro_task.hpp  iouring.hpp  iouring_coroutine.hpp  iouring_net.hpp  iouring_service.hpp  iouring_timer.hpp  iouring_utils_time.hpp
iouring-cpp/src/: iouring.cpp  iouring_impl.hpp  iouring_impl_liburing.hpp  iouring_impl_raw_io_uring.hpp  iouring_net.cpp  iouring_service.cpp  iouring_timer.cpp
iouring-cpp/tests/: CMakeLists.txt  iouring_test_coroutine.cpp  iouring_test_main.cpp  iouring_test_network.cpp  iouring_test_timeout.cpp
logging/: CMakeLists.txt
logging/include/logging/: logging.hpp
reflection/: CMakeLists.txt  reflection.hpp
reflection/include/reflection/: reflection.hpp
reflection/tests/: CMakeLists.txt  reflection_test.cpp
scripts/: fl
types/: CMakeLists.txt
types/include/types/: bitset.hpp  estring.hpp  string_literal.hpp
types/src/: bitset.cpp  estring.cpp  string_literal.cpp
types/tests/: CMakeLists.txt  estring_tests.cpp  string_literal_tests.cpp  types_test_main.cpp
